# mu-rust

./: .gitignore  AGENTS.md  Cargo.toml  WORLD_USAGE.md  settings.yaml
.feature/: plan.md
assets/reports/: misc_report.json  models_report.json  sidecars_report.json  sidecars_report_after.json  textures_report.json  validation_report.json
assets/shaders/: grass_billboard.wgsl  legacy_additive.wgsl  lightning_sprite_2d.wgsl  terrain.wgsl
client/: Cargo.toml
client/src/: bevy_compat.rs  grid_overlay.rs  legacy_additive.rs  lib.rs  lightning_sprite_2d.rs  main.rs
client/src/app/: bootstrap.rs  mod.rs  plugins.rs  state.rs
client/src/character/: animation.rs  animations.rs  config.rs  controller.rs  equipment.rs  factory.rs  mod.rs  movement.rs  types.rs
client/src/composition/: character_viewer_runtime.rs  client_runtime.rs  mod.rs  object_viewer_runtime.rs
client/src/core/: mod.rs
client/src/domain/: mod.rs
client/src/domain/settings/: mod.rs
client/src/gameplay/: mod.rs
client/src/gameplay/controllers/: mod.rs  scene_controller.rs  world_controller.rs
client/src/gameplay/runtime/: mod.rs  pipeline.rs  registration.rs
client/src/gameplay/scenes/: mod.rs
client/src/gameplay/scenes/gameplay/: mod.rs
client/src/gameplay/scenes/loading/: mod.rs
client/src/gameplay/scenes/login/: mod.rs
client/src/gameplay/systems/: camera.rs  lighting.rs  mod.rs  objects.rs  particles.rs  skills.rs  terrain.rs
client/src/infra/: mod.rs
client/src/infra/assets/: mod.rs  resolver.rs
client/src/infra/input/: mod.rs
client/src/infra/persistence/: mod.rs  settings_store.rs
client/src/infra/render/: mod.rs
client/src/presentation/debug/: mod.rs
client/src/presentation/ui/: mod.rs
client/src/presentation/ui/hud/: mod.rs
client/src/presentation/ui/login/: mod.rs
client/src/presentation/ui/widgets/: mod.rs
client/src/scene_runtime/: components.rs  mod.rs  pipeline.rs  registration.rs  scene_loader.rs  state.rs  transforms.rs  world_coordinates.rs
client/src/scene_runtime/systems/: animations.rs  asset_loaders.rs  boids.rs  boundary_walls.rs  camera.rs  death_stab.rs  debug_stats.rs  frame_limiter.rs  grass.rs  grid_overlay.rs  lighting.rs  login_world_56_fx.rs  mod.rs  objects.rs  particles.rs  shadow_quality.rs  skill_effects.rs  skybox.rs  terrain.rs  vfx.rs  weapon_trail.rs
client/src/scenes/: loading.rs  mock.rs  mod.rs
client/src/scenes/gameplay/: mod.rs
client/src/scenes/login/: components.rs  mod.rs
client/src/scenes/login/systems/: asset_loaders.rs  boids.rs  camera.rs  debug_stats.rs  lighting.rs  mod.rs  objects.rs  particles.rs  terrain.rs
client/src/settings/: mod.rs
client/src/ui/: mod.rs
client/src/world/: mod.rs
client/tests/: scene_controller_plugin_tests.rs  state_transition_cleanup_tests.rs
common/src/: lib.rs
docker/: .env.example  .gitignore  README.md  docker-compose.yml  mongo-init.js
docs/architecture/: mu-server-workflows.md  protocol-migration-roadmap.md  protocol-runtime-workflows.md  protocol-v2-quic.md
docs/client/: assets_data.md
docs/server/: protocol.md
protocol/: Cargo.toml
protocol/benches/: serialization.rs
protocol/src/: channel.rs  codec.rs  de.rs  header.rs  lib.rs  message.rs  packets.rs  ser.rs
protocol/tests/: roundtrip.rs
scripts/: remaster_glb.py  remaster_glb_v2.py
scripts/client_converter/: README.md  assets_convert.py  bmd_converter.py  convert_all_assets.sh  test_bmd_blend_probe.py  validate_assets.py
server/: .env.example  Cargo.toml  README.md  run.sh
server/config/: runtime.toml  servers.toml
server/scripts/: sim_client.sh
server/src/: auth_token.rs  error.rs  lib.rs  main.rs  protocol_runtime.rs
server/src/config/: mod.rs
server/src/db/: mod.rs  models.rs  repository.rs
server/src/handlers/: auth.rs  characters.rs  health.rs  mod.rs  runtime.rs  servers.rs
server/src/middleware/: auth.rs  mod.rs  rate_limit.rs
server/src/monitor/: health.rs  mod.rs
server/src/runtime/: config.rs  core.rs  directory.rs  map_server.rs  message_hub.rs  mod.rs  persistence.rs  quic_gateway.rs
server/src/session/: manager.rs
server/tests/: config_tests.rs  health_tests.rs  monitor_tests.rs  rate_limit_tests.rs  runtime_tests.rs  server_list_tests.rs
