[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { workspace = true }
common = { workspace = true }
bevy = { version = "0.14.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_pbr",
    "bevy_scene",
    "bevy_gltf",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "png",
    "default_font",
    "x11"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1.0"
