[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { workspace = true }
common = { workspace = true }
bevy = { version = "0.18.0", default-features = false, features = [
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_log",
    "bevy_camera",
    "bevy_image",
    "bevy_mesh",
    "bevy_light",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_render",
    "bevy_pbr",
    "bevy_scene",
    "bevy_gltf",
    "gltf_animation",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_state",
    "bevy_gizmos",
    "reflect_auto_register",
    "multi_threaded",
    "png",
    "jpeg",
    "tga",
    "default_font",
    "vorbis",
    "wav",
    "mp3",
    "flac",
    "x11"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
thiserror = "1.0"
bevy_egui = "0.39.1"

[features]
solari = ["bevy/bevy_solari"]

[[bin]]
name = "character_viewer"
path = "src/bin/character_viewer.rs"

[[bin]]
name = "skill43_viewer"
path = "src/bin/skill43_viewer.rs"

[[bin]]
name = "evil_spirit_viewer"
path = "src/bin/evil_spirit_viewer.rs"
