[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "serialization"
harness = false
