[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
protocol = { workspace = true }

# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database
mongodb = "3"
bson = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Password hashing
bcrypt = "0.15"

# Configuration
config = "0.14"
toml = "0.8"
dotenvy = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

# Concurrency
dashmap = "6"

[dev-dependencies]
# Testing (actix-web already includes test utilities)
serial_test = "3"

