[package]
name = "server"
version = "0.1.0"
edition = "2021"

[features]
default = []

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "sim-client"
path = "src/bin/sim_client.rs"

[dependencies]
protocol = { workspace = true }

# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Database
mongodb = "3"
bson = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }

# Password hashing
bcrypt = "0.15"

# Configuration
config = "0.14"
toml = "0.8"
dotenvy = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "1"

# Concurrency
dashmap = "6"

# Auth token signing
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

# QUIC transport
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"

[dev-dependencies]
# Testing (actix-web already includes test utilities)
serial_test = "3"
